fix(payment): 거래 내역 리스트를 페이징 방식으로 변경, 만료 상태로 바뀌지 않는 오류 수정